    
- engine
  - Implemented sequence check capability for the C 
    version of RowProxy, as well as 2.7 style 
    "collections.Sequence" registration for RowProxy.
    [ticket:1871]
    
- mysql
  - Fixed error handling for Jython + zxjdbc, such that 
    has_table() property works again.  Regression from
    0.6.3 (we don't have a Jython buildbot, sorry)
    [ticket:1960]
    
0.6.5
=====
- orm
  - Added a new "lazyload" option "immediateload".  
    Issues the usual "lazy" load operation automatically
    as the object is populated.   The use case
    here is when loading objects to be placed in
    an offline cache, or otherwise used after
    the session isn't available, and straight 'select'
    loading, not 'joined' or 'subquery', is desired.
    [ticket:1914]
  
  - New Query methods: query.label(name), query.as_scalar(),
    return the query's statement as a scalar subquery
    with /without label [ticket:1920];
    query.with_entities(*ent), replaces the SELECT list of 
    the query with new entities. 
    Roughly equivalent to a generative form of query.values()
    which accepts mapped entities as well as column 
    expressions.
    
  - Fixed recursion bug which could occur when moving
    an object from one reference to another, with 
    backrefs involved, where the initiating parent
    was a subclass (with its own mapper) of the 
    previous parent.

  - Fixed a regression in 0.6.4 which occurred if you 
    passed an empty list to "include_properties" on 
    mapper() [ticket:1918]
  
  - Fixed labeling bug in Query whereby the NamedTuple
    would mis-apply labels if any of the column
    expressions were un-labeled.
    
  - Patched a case where query.join() would adapt the
    right side to the right side of the left's join
    inappropriately [ticket:1925]

  - Query.select_from() has been beefed up to help
    ensure that a subsequent call to query.join()
    will use the select_from() entity, assuming it's