@@ -384,6 +384,27 @@ class SQLTest(TestBase, AssertsCompiledSQL):
                                 "SELECT CAST(STRFTIME('%s', t.col1) AS "
                                 "INTEGER) AS anon_1 FROM t" % subst)
 
+    def test_constraints_with_schemas(self):
+        metadata = MetaData()
+        t1 = Table('t1', metadata, 
+                        Column('id', Integer, primary_key=True),
+                        schema='master')
+        t2 = Table('t2', metadata, 
+                        Column('id', Integer, primary_key=True),
+                        Column('t2_id', Integer, ForeignKey('master.t1.id')),
+                        schema='master'
+                    )
+        
+        self.assert_compile(
+            schema.CreateTable(t2),
+                "CREATE TABLE master.t2 ("
+                "id INTEGER NOT NULL, "
+                "t2_id INTEGER, "
+                "PRIMARY KEY (id), "
+                "FOREIGN KEY(t2_id) REFERENCES t1 (id)"
+                ")"            
+        )
+
 
 class InsertTest(TestBase, AssertsExecutionResults):
 
